# base

./: README.md  flake.nix  pyproject.toml
nix/: devShell.nix  devShells.nix
pythonedaartifact/: tag.py  tag_repository_requested.py  tag_requested.py
pythonedaartifactgittagging/: git_repo_factory.py  tag.py  tag_created.py  tag_credentials_requested.py  tag_requested.py
tests/: tag_tests.py
