[tool.poetry]
name = "pythoneda-artifact-base"
version = "0.0.1a2"
description = "Artifact scope for pythoneda/base"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-artifact/base"
packages = [{include = "pythonedaartifact"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a14"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
